<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/Pregunta_1"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbtn_si_orden"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn1"
                        android:layout_marginLeft="100dp"
                        android:layout_marginRight="20dp"/>

                    <RadioButton
                        android:id="@+id/rbtn_no_orden"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn2" />
                </RadioGroup>
            </TableRow>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/Pregunta_2"
                android:textAlignment="center"
                android:textSize="24dp" />

            <TableRow
                android:id="@+id/row_rbtn_elementos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbtn_si_elementos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/btn1" />

                    <RadioButton
                        android:id="@+id/rbtn_no_elementos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn2" />
                </RadioGroup>
            </TableRow>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/Pregunta_3"
                android:textAlignment="center"
                android:textSize="24dp" />

            <TableRow
                android:id="@+id/row_rbtn_repeticion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbtn_si_repeticion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/btn1" />

                    <RadioButton
                        android:id="@+id/rbtn_no_repeticion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn2" />
                </RadioGroup>
            </TableRow>

            <Button
                android:id="@+id/btn_IniciarOp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_Enviar"
                android:layout_marginTop="40dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>